--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,6 @@
             "email": "romantomchak@gmail.com"
         }
     ],
-    "repositories": {
-        "magento": {
-            "url": "https://repo.magento.com",
-            "type": "composer"
-        }
-    },
     "description": "PHPCS Coding standards for Magento 2 projects",
     "homepage": "https://github.com/Ainnomix/magento2-quality-phpcs",
     "keywords": [
@@ -23,7 +17,15 @@
         "magento2"
     ],
     "require": {
-        "squizlabs/php_codesniffer": "^2.6.2|^3.1.0",
-        "magento/marketplace-eqp": "^1.0.5"
+        "squizlabs/php_codesniffer": "~3.4.0",
+        "magento/magento-coding-standard": "*"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "vendor/bin/phpcs --config-set installed_paths ../../..,../../magento/magento-coding-standard"
+        ],
+        "post-update-cmd": [
+            "vendor/bin/phpcs --config-set installed_paths ../../..,../../magento/magento-coding-standard"
+        ]
     }
 }
